--- a/MediaPicker/multiple-media-picker/src/main/res/layout/fragment_one.xml
+++ b/MediaPicker/multiple-media-picker/src/main/res/layout/fragment_one.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.erikagtierrez.multiple_media_picker.Fragments.OneFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:scrollbars="vertical"
         android:layout_width="wrap_content"
